// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`createMethods with \`null\` as \`emptyValueAs\` 1`] = `
"import { Enum } from '@prisma/client';
import { faker } from '@faker-js/faker';
import Decimal from 'decimal.js';



export function fakeUser() {
  return {
    email: faker.internet.email(),
    name: faker.person.fullName(),
    companyName: faker.company.name(),
    age: faker.number.int({min: 0, max: 99}),
    firstName: faker.person.firstName(),
    lastName: faker.person.lastName(),
    string: faker.lorem.words(5),
    nullableString: null,
    boolean: faker.datatype.boolean(),
    nullableBoolean: null,
    int: faker.number.int(),
    nullableInt: null,
    bigInt: BigInt(faker.number.int()),
    nullableBigInt: null,
    float: faker.number.float(),
    nullableFloat: null,
    decimal: new Decimal(faker.number.float()),
    nullableDecimal: null,
    dateTime: faker.date.anytime(),
    nullableDateTime: null,
    stringArray: faker.lorem.words(5).split(' '),
    intArray: [faker.number.int({ max: 2147483647 }),faker.number.int({ max: 2147483647 }),faker.number.int({ max: 2147483647 }),faker.number.int({ max: 2147483647 }),faker.number.int({ max: 2147483647 })],
    bigIntArray: [BigInt(faker.number.int()),BigInt(faker.number.int()),BigInt(faker.number.int()),BigInt(faker.number.int()),BigInt(faker.number.int())],
    floatArray: [faker.number.float(),faker.number.float(),faker.number.float(),faker.number.float(),faker.number.float()],
    booleanArray: [faker.datatype.boolean(),faker.datatype.boolean(),faker.datatype.boolean(),faker.datatype.boolean(),faker.datatype.boolean()],
    dateTimeArray: [faker.date.anytime(),faker.date.anytime(),faker.date.anytime(),faker.date.anytime(),faker.date.anytime()],
    json: {test: faker.lorem.word()},
    nullableJson: undefined,
    enum: faker.helpers.arrayElement([Enum.A, Enum.B, Enum.C] as const),
    nullableEnum: null,
    enums: faker.helpers.arrayElement([Enum.A, Enum.B, Enum.C] as const),
  };
}
export function fakeUserComplete() {
  return {
    id: faker.string.uuid(),
    email: faker.internet.email(),
    name: faker.person.fullName(),
    companyName: faker.company.name(),
    age: faker.number.int({min: 0, max: 99}),
    firstName: faker.person.firstName(),
    lastName: faker.person.lastName(),
    string: faker.lorem.words(5),
    stringWithDefault: 'default',
    nullableString: null,
    boolean: faker.datatype.boolean(),
    booleanWithDefault: true,
    nullableBoolean: null,
    int: faker.number.int(),
    intWithDefault: 1,
    nullableInt: null,
    bigInt: BigInt(faker.number.int()),
    bigIntWithDefault: BigInt(1),
    nullableBigInt: null,
    float: faker.number.float(),
    floatWithDefault: 1.1,
    nullableFloat: null,
    decimal: new Decimal(faker.number.float()),
    decimalWithDefault: new Decimal(1.23),
    nullableDecimal: null,
    dateTime: faker.date.anytime(),
    dateTimeWithDefault: new Date(),
    nullableDateTime: null,
    stringArray: faker.lorem.words(5).split(' '),
    intArray: [faker.number.int({ max: 2147483647 }),faker.number.int({ max: 2147483647 }),faker.number.int({ max: 2147483647 }),faker.number.int({ max: 2147483647 }),faker.number.int({ max: 2147483647 })],
    bigIntArray: [BigInt(faker.number.int()),BigInt(faker.number.int()),BigInt(faker.number.int()),BigInt(faker.number.int()),BigInt(faker.number.int())],
    floatArray: [faker.number.float(),faker.number.float(),faker.number.float(),faker.number.float(),faker.number.float()],
    booleanArray: [faker.datatype.boolean(),faker.datatype.boolean(),faker.datatype.boolean(),faker.datatype.boolean(),faker.datatype.boolean()],
    dateTimeArray: [faker.date.anytime(),faker.date.anytime(),faker.date.anytime(),faker.date.anytime(),faker.date.anytime()],
    json: {test: faker.lorem.word()},
    jsonWithDefault: {},
    jsonWithDefaultAndFake: {test2: faker.lorem.word()},
    nullableJson: undefined,
    enum: faker.helpers.arrayElement([Enum.A, Enum.B, Enum.C] as const),
    enumWithDefault: Enum.A,
    nullableEnum: null,
    enums: faker.helpers.arrayElement([Enum.A, Enum.B, Enum.C] as const),
    enumsWithDefault: [Enum.A, Enum.B],
  };
}
export function fakeUser2Complete() {
  return {
    id: faker.number.int({ max: 2147483647 }),
  };
}
export function fakeUserRelationComplete() {
  return {
    id: faker.string.uuid(),
    userId: faker.string.uuid(),
    userId2: faker.string.uuid(),
  };
}
export function fakeUser2RelationComplete() {
  return {
    id: faker.string.uuid(),
    user2Id: faker.number.int(),
  };
}
"
`;

exports[`createMethods with custom clientImportPath 1`] = `
"import { Enum } from './src/generated/client';
import { faker } from '@faker-js/faker';
import Decimal from 'decimal.js';



export function fakeUser() {
  return {
    email: faker.internet.email(),
    name: faker.person.fullName(),
    companyName: faker.company.name(),
    age: faker.number.int({min: 0, max: 99}),
    firstName: faker.person.firstName(),
    lastName: faker.person.lastName(),
    string: faker.lorem.words(5),
    nullableString: null,
    boolean: faker.datatype.boolean(),
    nullableBoolean: null,
    int: faker.number.int(),
    nullableInt: null,
    bigInt: BigInt(faker.number.int()),
    nullableBigInt: null,
    float: faker.number.float(),
    nullableFloat: null,
    decimal: new Decimal(faker.number.float()),
    nullableDecimal: null,
    dateTime: faker.date.anytime(),
    nullableDateTime: null,
    stringArray: faker.lorem.words(5).split(' '),
    intArray: [faker.number.int({ max: 2147483647 }),faker.number.int({ max: 2147483647 }),faker.number.int({ max: 2147483647 }),faker.number.int({ max: 2147483647 }),faker.number.int({ max: 2147483647 })],
    bigIntArray: [BigInt(faker.number.int()),BigInt(faker.number.int()),BigInt(faker.number.int()),BigInt(faker.number.int()),BigInt(faker.number.int())],
    floatArray: [faker.number.float(),faker.number.float(),faker.number.float(),faker.number.float(),faker.number.float()],
    booleanArray: [faker.datatype.boolean(),faker.datatype.boolean(),faker.datatype.boolean(),faker.datatype.boolean(),faker.datatype.boolean()],
    dateTimeArray: [faker.date.anytime(),faker.date.anytime(),faker.date.anytime(),faker.date.anytime(),faker.date.anytime()],
    json: {test: faker.lorem.word()},
    nullableJson: undefined,
    enum: faker.helpers.arrayElement([Enum.A, Enum.B, Enum.C] as const),
    nullableEnum: null,
    enums: faker.helpers.arrayElement([Enum.A, Enum.B, Enum.C] as const),
  };
}
export function fakeUserComplete() {
  return {
    id: faker.string.uuid(),
    email: faker.internet.email(),
    name: faker.person.fullName(),
    companyName: faker.company.name(),
    age: faker.number.int({min: 0, max: 99}),
    firstName: faker.person.firstName(),
    lastName: faker.person.lastName(),
    string: faker.lorem.words(5),
    stringWithDefault: 'default',
    nullableString: null,
    boolean: faker.datatype.boolean(),
    booleanWithDefault: true,
    nullableBoolean: null,
    int: faker.number.int(),
    intWithDefault: 1,
    nullableInt: null,
    bigInt: BigInt(faker.number.int()),
    bigIntWithDefault: BigInt(1),
    nullableBigInt: null,
    float: faker.number.float(),
    floatWithDefault: 1.1,
    nullableFloat: null,
    decimal: new Decimal(faker.number.float()),
    decimalWithDefault: new Decimal(1.23),
    nullableDecimal: null,
    dateTime: faker.date.anytime(),
    dateTimeWithDefault: new Date(),
    nullableDateTime: null,
    stringArray: faker.lorem.words(5).split(' '),
    intArray: [faker.number.int({ max: 2147483647 }),faker.number.int({ max: 2147483647 }),faker.number.int({ max: 2147483647 }),faker.number.int({ max: 2147483647 }),faker.number.int({ max: 2147483647 })],
    bigIntArray: [BigInt(faker.number.int()),BigInt(faker.number.int()),BigInt(faker.number.int()),BigInt(faker.number.int()),BigInt(faker.number.int())],
    floatArray: [faker.number.float(),faker.number.float(),faker.number.float(),faker.number.float(),faker.number.float()],
    booleanArray: [faker.datatype.boolean(),faker.datatype.boolean(),faker.datatype.boolean(),faker.datatype.boolean(),faker.datatype.boolean()],
    dateTimeArray: [faker.date.anytime(),faker.date.anytime(),faker.date.anytime(),faker.date.anytime(),faker.date.anytime()],
    json: {test: faker.lorem.word()},
    jsonWithDefault: {},
    jsonWithDefaultAndFake: {test2: faker.lorem.word()},
    nullableJson: undefined,
    enum: faker.helpers.arrayElement([Enum.A, Enum.B, Enum.C] as const),
    enumWithDefault: Enum.A,
    nullableEnum: null,
    enums: faker.helpers.arrayElement([Enum.A, Enum.B, Enum.C] as const),
    enumsWithDefault: [Enum.A, Enum.B],
  };
}
export function fakeUser2Complete() {
  return {
    id: faker.number.int({ max: 2147483647 }),
  };
}
export function fakeUserRelationComplete() {
  return {
    id: faker.string.uuid(),
    userId: faker.string.uuid(),
    userId2: faker.string.uuid(),
  };
}
export function fakeUser2RelationComplete() {
  return {
    id: faker.string.uuid(),
    user2Id: faker.number.int(),
  };
}
"
`;

exports[`createMethods with default clientImportPath 1`] = `
"import { Enum } from '@prisma/client';
import { faker } from '@faker-js/faker';
import Decimal from 'decimal.js';



export function fakeUser() {
  return {
    email: faker.internet.email(),
    name: faker.person.fullName(),
    companyName: faker.company.name(),
    age: faker.number.int({min: 0, max: 99}),
    firstName: faker.person.firstName(),
    lastName: faker.person.lastName(),
    string: faker.lorem.words(5),
    nullableString: null,
    boolean: faker.datatype.boolean(),
    nullableBoolean: null,
    int: faker.number.int(),
    nullableInt: null,
    bigInt: BigInt(faker.number.int()),
    nullableBigInt: null,
    float: faker.number.float(),
    nullableFloat: null,
    decimal: new Decimal(faker.number.float()),
    nullableDecimal: null,
    dateTime: faker.date.anytime(),
    nullableDateTime: null,
    stringArray: faker.lorem.words(5).split(' '),
    intArray: [faker.number.int({ max: 2147483647 }),faker.number.int({ max: 2147483647 }),faker.number.int({ max: 2147483647 }),faker.number.int({ max: 2147483647 }),faker.number.int({ max: 2147483647 })],
    bigIntArray: [BigInt(faker.number.int()),BigInt(faker.number.int()),BigInt(faker.number.int()),BigInt(faker.number.int()),BigInt(faker.number.int())],
    floatArray: [faker.number.float(),faker.number.float(),faker.number.float(),faker.number.float(),faker.number.float()],
    booleanArray: [faker.datatype.boolean(),faker.datatype.boolean(),faker.datatype.boolean(),faker.datatype.boolean(),faker.datatype.boolean()],
    dateTimeArray: [faker.date.anytime(),faker.date.anytime(),faker.date.anytime(),faker.date.anytime(),faker.date.anytime()],
    json: {test: faker.lorem.word()},
    nullableJson: undefined,
    enum: faker.helpers.arrayElement([Enum.A, Enum.B, Enum.C] as const),
    nullableEnum: null,
    enums: faker.helpers.arrayElement([Enum.A, Enum.B, Enum.C] as const),
  };
}
export function fakeUserComplete() {
  return {
    id: faker.string.uuid(),
    email: faker.internet.email(),
    name: faker.person.fullName(),
    companyName: faker.company.name(),
    age: faker.number.int({min: 0, max: 99}),
    firstName: faker.person.firstName(),
    lastName: faker.person.lastName(),
    string: faker.lorem.words(5),
    stringWithDefault: 'default',
    nullableString: null,
    boolean: faker.datatype.boolean(),
    booleanWithDefault: true,
    nullableBoolean: null,
    int: faker.number.int(),
    intWithDefault: 1,
    nullableInt: null,
    bigInt: BigInt(faker.number.int()),
    bigIntWithDefault: BigInt(1),
    nullableBigInt: null,
    float: faker.number.float(),
    floatWithDefault: 1.1,
    nullableFloat: null,
    decimal: new Decimal(faker.number.float()),
    decimalWithDefault: new Decimal(1.23),
    nullableDecimal: null,
    dateTime: faker.date.anytime(),
    dateTimeWithDefault: new Date(),
    nullableDateTime: null,
    stringArray: faker.lorem.words(5).split(' '),
    intArray: [faker.number.int({ max: 2147483647 }),faker.number.int({ max: 2147483647 }),faker.number.int({ max: 2147483647 }),faker.number.int({ max: 2147483647 }),faker.number.int({ max: 2147483647 })],
    bigIntArray: [BigInt(faker.number.int()),BigInt(faker.number.int()),BigInt(faker.number.int()),BigInt(faker.number.int()),BigInt(faker.number.int())],
    floatArray: [faker.number.float(),faker.number.float(),faker.number.float(),faker.number.float(),faker.number.float()],
    booleanArray: [faker.datatype.boolean(),faker.datatype.boolean(),faker.datatype.boolean(),faker.datatype.boolean(),faker.datatype.boolean()],
    dateTimeArray: [faker.date.anytime(),faker.date.anytime(),faker.date.anytime(),faker.date.anytime(),faker.date.anytime()],
    json: {test: faker.lorem.word()},
    jsonWithDefault: {},
    jsonWithDefaultAndFake: {test2: faker.lorem.word()},
    nullableJson: undefined,
    enum: faker.helpers.arrayElement([Enum.A, Enum.B, Enum.C] as const),
    enumWithDefault: Enum.A,
    nullableEnum: null,
    enums: faker.helpers.arrayElement([Enum.A, Enum.B, Enum.C] as const),
    enumsWithDefault: [Enum.A, Enum.B],
  };
}
export function fakeUser2Complete() {
  return {
    id: faker.number.int({ max: 2147483647 }),
  };
}
export function fakeUserRelationComplete() {
  return {
    id: faker.string.uuid(),
    userId: faker.string.uuid(),
    userId2: faker.string.uuid(),
  };
}
export function fakeUser2RelationComplete() {
  return {
    id: faker.string.uuid(),
    user2Id: faker.number.int(),
  };
}
"
`;

exports[`createMethods with extraExport 1`] = `
"import { Enum } from '@prisma/client';
import { faker } from '@faker-js/faker';
import Decimal from 'decimal.js';

export * from '../utils/fakeImports'

export function fakeUser() {
  return {
    email: faker.internet.email(),
    name: faker.person.fullName(),
    companyName: faker.company.name(),
    age: faker.number.int({min: 0, max: 99}),
    firstName: faker.person.firstName(),
    lastName: faker.person.lastName(),
    string: faker.lorem.words(5),
    nullableString: undefined,
    boolean: faker.datatype.boolean(),
    nullableBoolean: undefined,
    int: faker.number.int(),
    nullableInt: undefined,
    bigInt: BigInt(faker.number.int()),
    nullableBigInt: undefined,
    float: faker.number.float(),
    nullableFloat: undefined,
    decimal: new Decimal(faker.number.float()),
    nullableDecimal: undefined,
    dateTime: faker.date.anytime(),
    nullableDateTime: undefined,
    stringArray: faker.lorem.words(5).split(' '),
    intArray: [faker.number.int({ max: 2147483647 }),faker.number.int({ max: 2147483647 }),faker.number.int({ max: 2147483647 }),faker.number.int({ max: 2147483647 }),faker.number.int({ max: 2147483647 })],
    bigIntArray: [BigInt(faker.number.int()),BigInt(faker.number.int()),BigInt(faker.number.int()),BigInt(faker.number.int()),BigInt(faker.number.int())],
    floatArray: [faker.number.float(),faker.number.float(),faker.number.float(),faker.number.float(),faker.number.float()],
    booleanArray: [faker.datatype.boolean(),faker.datatype.boolean(),faker.datatype.boolean(),faker.datatype.boolean(),faker.datatype.boolean()],
    dateTimeArray: [faker.date.anytime(),faker.date.anytime(),faker.date.anytime(),faker.date.anytime(),faker.date.anytime()],
    json: {test: faker.lorem.word()},
    nullableJson: undefined,
    enum: faker.helpers.arrayElement([Enum.A, Enum.B, Enum.C] as const),
    nullableEnum: undefined,
    enums: faker.helpers.arrayElement([Enum.A, Enum.B, Enum.C] as const),
  };
}
export function fakeUserComplete() {
  return {
    id: faker.string.uuid(),
    email: faker.internet.email(),
    name: faker.person.fullName(),
    companyName: faker.company.name(),
    age: faker.number.int({min: 0, max: 99}),
    firstName: faker.person.firstName(),
    lastName: faker.person.lastName(),
    string: faker.lorem.words(5),
    stringWithDefault: 'default',
    nullableString: undefined,
    boolean: faker.datatype.boolean(),
    booleanWithDefault: true,
    nullableBoolean: undefined,
    int: faker.number.int(),
    intWithDefault: 1,
    nullableInt: undefined,
    bigInt: BigInt(faker.number.int()),
    bigIntWithDefault: BigInt(1),
    nullableBigInt: undefined,
    float: faker.number.float(),
    floatWithDefault: 1.1,
    nullableFloat: undefined,
    decimal: new Decimal(faker.number.float()),
    decimalWithDefault: new Decimal(1.23),
    nullableDecimal: undefined,
    dateTime: faker.date.anytime(),
    dateTimeWithDefault: new Date(),
    nullableDateTime: undefined,
    stringArray: faker.lorem.words(5).split(' '),
    intArray: [faker.number.int({ max: 2147483647 }),faker.number.int({ max: 2147483647 }),faker.number.int({ max: 2147483647 }),faker.number.int({ max: 2147483647 }),faker.number.int({ max: 2147483647 })],
    bigIntArray: [BigInt(faker.number.int()),BigInt(faker.number.int()),BigInt(faker.number.int()),BigInt(faker.number.int()),BigInt(faker.number.int())],
    floatArray: [faker.number.float(),faker.number.float(),faker.number.float(),faker.number.float(),faker.number.float()],
    booleanArray: [faker.datatype.boolean(),faker.datatype.boolean(),faker.datatype.boolean(),faker.datatype.boolean(),faker.datatype.boolean()],
    dateTimeArray: [faker.date.anytime(),faker.date.anytime(),faker.date.anytime(),faker.date.anytime(),faker.date.anytime()],
    json: {test: faker.lorem.word()},
    jsonWithDefault: {},
    jsonWithDefaultAndFake: {test2: faker.lorem.word()},
    nullableJson: undefined,
    enum: faker.helpers.arrayElement([Enum.A, Enum.B, Enum.C] as const),
    enumWithDefault: Enum.A,
    nullableEnum: undefined,
    enums: faker.helpers.arrayElement([Enum.A, Enum.B, Enum.C] as const),
    enumsWithDefault: [Enum.A, Enum.B],
  };
}
export function fakeUser2Complete() {
  return {
    id: faker.number.int({ max: 2147483647 }),
  };
}
export function fakeUserRelationComplete() {
  return {
    id: faker.string.uuid(),
    userId: faker.string.uuid(),
    userId2: faker.string.uuid(),
  };
}
export function fakeUser2RelationComplete() {
  return {
    id: faker.string.uuid(),
    user2Id: faker.number.int(),
  };
}
"
`;

exports[`createMethods with extraImport 1`] = `
"import { Enum } from '@prisma/client';
import { faker } from '@faker-js/faker';
import Decimal from 'decimal.js';
import {myCustomFunction} from '../utils/fakeImports'


export function fakeUser() {
  return {
    email: faker.internet.email(),
    name: faker.person.fullName(),
    companyName: faker.company.name(),
    age: faker.number.int({min: 0, max: 99}),
    firstName: faker.person.firstName(),
    lastName: faker.person.lastName(),
    string: faker.lorem.words(5),
    nullableString: undefined,
    boolean: faker.datatype.boolean(),
    nullableBoolean: undefined,
    int: faker.number.int(),
    nullableInt: undefined,
    bigInt: BigInt(faker.number.int()),
    nullableBigInt: undefined,
    float: faker.number.float(),
    nullableFloat: undefined,
    decimal: new Decimal(faker.number.float()),
    nullableDecimal: undefined,
    dateTime: faker.date.anytime(),
    nullableDateTime: undefined,
    stringArray: faker.lorem.words(5).split(' '),
    intArray: [faker.number.int({ max: 2147483647 }),faker.number.int({ max: 2147483647 }),faker.number.int({ max: 2147483647 }),faker.number.int({ max: 2147483647 }),faker.number.int({ max: 2147483647 })],
    bigIntArray: [BigInt(faker.number.int()),BigInt(faker.number.int()),BigInt(faker.number.int()),BigInt(faker.number.int()),BigInt(faker.number.int())],
    floatArray: [faker.number.float(),faker.number.float(),faker.number.float(),faker.number.float(),faker.number.float()],
    booleanArray: [faker.datatype.boolean(),faker.datatype.boolean(),faker.datatype.boolean(),faker.datatype.boolean(),faker.datatype.boolean()],
    dateTimeArray: [faker.date.anytime(),faker.date.anytime(),faker.date.anytime(),faker.date.anytime(),faker.date.anytime()],
    json: {test: faker.lorem.word()},
    nullableJson: undefined,
    enum: faker.helpers.arrayElement([Enum.A, Enum.B, Enum.C] as const),
    nullableEnum: undefined,
    enums: faker.helpers.arrayElement([Enum.A, Enum.B, Enum.C] as const),
  };
}
export function fakeUserComplete() {
  return {
    id: faker.string.uuid(),
    email: faker.internet.email(),
    name: faker.person.fullName(),
    companyName: faker.company.name(),
    age: faker.number.int({min: 0, max: 99}),
    firstName: faker.person.firstName(),
    lastName: faker.person.lastName(),
    string: faker.lorem.words(5),
    stringWithDefault: 'default',
    nullableString: undefined,
    boolean: faker.datatype.boolean(),
    booleanWithDefault: true,
    nullableBoolean: undefined,
    int: faker.number.int(),
    intWithDefault: 1,
    nullableInt: undefined,
    bigInt: BigInt(faker.number.int()),
    bigIntWithDefault: BigInt(1),
    nullableBigInt: undefined,
    float: faker.number.float(),
    floatWithDefault: 1.1,
    nullableFloat: undefined,
    decimal: new Decimal(faker.number.float()),
    decimalWithDefault: new Decimal(1.23),
    nullableDecimal: undefined,
    dateTime: faker.date.anytime(),
    dateTimeWithDefault: new Date(),
    nullableDateTime: undefined,
    stringArray: faker.lorem.words(5).split(' '),
    intArray: [faker.number.int({ max: 2147483647 }),faker.number.int({ max: 2147483647 }),faker.number.int({ max: 2147483647 }),faker.number.int({ max: 2147483647 }),faker.number.int({ max: 2147483647 })],
    bigIntArray: [BigInt(faker.number.int()),BigInt(faker.number.int()),BigInt(faker.number.int()),BigInt(faker.number.int()),BigInt(faker.number.int())],
    floatArray: [faker.number.float(),faker.number.float(),faker.number.float(),faker.number.float(),faker.number.float()],
    booleanArray: [faker.datatype.boolean(),faker.datatype.boolean(),faker.datatype.boolean(),faker.datatype.boolean(),faker.datatype.boolean()],
    dateTimeArray: [faker.date.anytime(),faker.date.anytime(),faker.date.anytime(),faker.date.anytime(),faker.date.anytime()],
    json: {test: faker.lorem.word()},
    jsonWithDefault: {},
    jsonWithDefaultAndFake: {test2: faker.lorem.word()},
    nullableJson: undefined,
    enum: faker.helpers.arrayElement([Enum.A, Enum.B, Enum.C] as const),
    enumWithDefault: Enum.A,
    nullableEnum: undefined,
    enums: faker.helpers.arrayElement([Enum.A, Enum.B, Enum.C] as const),
    enumsWithDefault: [Enum.A, Enum.B],
  };
}
export function fakeUser2Complete() {
  return {
    id: faker.number.int({ max: 2147483647 }),
  };
}
export function fakeUserRelationComplete() {
  return {
    id: faker.string.uuid(),
    userId: faker.string.uuid(),
    userId2: faker.string.uuid(),
  };
}
export function fakeUser2RelationComplete() {
  return {
    id: faker.string.uuid(),
    user2Id: faker.number.int(),
  };
}
"
`;

exports[`createMethods with extraImport and extraExport 1`] = `
"import { Enum } from '@prisma/client';
import { faker } from '@faker-js/faker';
import Decimal from 'decimal.js';
import {myCustomFunction} from '../utils/fakeImports'
export * from '../utils/fakeImports'

export function fakeUser() {
  return {
    email: faker.internet.email(),
    name: faker.person.fullName(),
    companyName: faker.company.name(),
    age: faker.number.int({min: 0, max: 99}),
    firstName: faker.person.firstName(),
    lastName: faker.person.lastName(),
    string: faker.lorem.words(5),
    nullableString: undefined,
    boolean: faker.datatype.boolean(),
    nullableBoolean: undefined,
    int: faker.number.int(),
    nullableInt: undefined,
    bigInt: BigInt(faker.number.int()),
    nullableBigInt: undefined,
    float: faker.number.float(),
    nullableFloat: undefined,
    decimal: new Decimal(faker.number.float()),
    nullableDecimal: undefined,
    dateTime: faker.date.anytime(),
    nullableDateTime: undefined,
    stringArray: faker.lorem.words(5).split(' '),
    intArray: [faker.number.int({ max: 2147483647 }),faker.number.int({ max: 2147483647 }),faker.number.int({ max: 2147483647 }),faker.number.int({ max: 2147483647 }),faker.number.int({ max: 2147483647 })],
    bigIntArray: [BigInt(faker.number.int()),BigInt(faker.number.int()),BigInt(faker.number.int()),BigInt(faker.number.int()),BigInt(faker.number.int())],
    floatArray: [faker.number.float(),faker.number.float(),faker.number.float(),faker.number.float(),faker.number.float()],
    booleanArray: [faker.datatype.boolean(),faker.datatype.boolean(),faker.datatype.boolean(),faker.datatype.boolean(),faker.datatype.boolean()],
    dateTimeArray: [faker.date.anytime(),faker.date.anytime(),faker.date.anytime(),faker.date.anytime(),faker.date.anytime()],
    json: {test: faker.lorem.word()},
    nullableJson: undefined,
    enum: faker.helpers.arrayElement([Enum.A, Enum.B, Enum.C] as const),
    nullableEnum: undefined,
    enums: faker.helpers.arrayElement([Enum.A, Enum.B, Enum.C] as const),
  };
}
export function fakeUserComplete() {
  return {
    id: faker.string.uuid(),
    email: faker.internet.email(),
    name: faker.person.fullName(),
    companyName: faker.company.name(),
    age: faker.number.int({min: 0, max: 99}),
    firstName: faker.person.firstName(),
    lastName: faker.person.lastName(),
    string: faker.lorem.words(5),
    stringWithDefault: 'default',
    nullableString: undefined,
    boolean: faker.datatype.boolean(),
    booleanWithDefault: true,
    nullableBoolean: undefined,
    int: faker.number.int(),
    intWithDefault: 1,
    nullableInt: undefined,
    bigInt: BigInt(faker.number.int()),
    bigIntWithDefault: BigInt(1),
    nullableBigInt: undefined,
    float: faker.number.float(),
    floatWithDefault: 1.1,
    nullableFloat: undefined,
    decimal: new Decimal(faker.number.float()),
    decimalWithDefault: new Decimal(1.23),
    nullableDecimal: undefined,
    dateTime: faker.date.anytime(),
    dateTimeWithDefault: new Date(),
    nullableDateTime: undefined,
    stringArray: faker.lorem.words(5).split(' '),
    intArray: [faker.number.int({ max: 2147483647 }),faker.number.int({ max: 2147483647 }),faker.number.int({ max: 2147483647 }),faker.number.int({ max: 2147483647 }),faker.number.int({ max: 2147483647 })],
    bigIntArray: [BigInt(faker.number.int()),BigInt(faker.number.int()),BigInt(faker.number.int()),BigInt(faker.number.int()),BigInt(faker.number.int())],
    floatArray: [faker.number.float(),faker.number.float(),faker.number.float(),faker.number.float(),faker.number.float()],
    booleanArray: [faker.datatype.boolean(),faker.datatype.boolean(),faker.datatype.boolean(),faker.datatype.boolean(),faker.datatype.boolean()],
    dateTimeArray: [faker.date.anytime(),faker.date.anytime(),faker.date.anytime(),faker.date.anytime(),faker.date.anytime()],
    json: {test: faker.lorem.word()},
    jsonWithDefault: {},
    jsonWithDefaultAndFake: {test2: faker.lorem.word()},
    nullableJson: undefined,
    enum: faker.helpers.arrayElement([Enum.A, Enum.B, Enum.C] as const),
    enumWithDefault: Enum.A,
    nullableEnum: undefined,
    enums: faker.helpers.arrayElement([Enum.A, Enum.B, Enum.C] as const),
    enumsWithDefault: [Enum.A, Enum.B],
  };
}
export function fakeUser2Complete() {
  return {
    id: faker.number.int({ max: 2147483647 }),
  };
}
export function fakeUserRelationComplete() {
  return {
    id: faker.string.uuid(),
    userId: faker.string.uuid(),
    userId2: faker.string.uuid(),
  };
}
export function fakeUser2RelationComplete() {
  return {
    id: faker.string.uuid(),
    user2Id: faker.number.int(),
  };
}
"
`;

exports[`createMethods without extraImport 1`] = `
"import { Enum } from '@prisma/client';
import { faker } from '@faker-js/faker';
import Decimal from 'decimal.js';



export function fakeUser() {
  return {
    email: faker.internet.email(),
    name: faker.person.fullName(),
    companyName: faker.company.name(),
    age: faker.number.int({min: 0, max: 99}),
    firstName: faker.person.firstName(),
    lastName: faker.person.lastName(),
    string: faker.lorem.words(5),
    nullableString: undefined,
    boolean: faker.datatype.boolean(),
    nullableBoolean: undefined,
    int: faker.number.int(),
    nullableInt: undefined,
    bigInt: BigInt(faker.number.int()),
    nullableBigInt: undefined,
    float: faker.number.float(),
    nullableFloat: undefined,
    decimal: new Decimal(faker.number.float()),
    nullableDecimal: undefined,
    dateTime: faker.date.anytime(),
    nullableDateTime: undefined,
    stringArray: faker.lorem.words(5).split(' '),
    intArray: [faker.number.int({ max: 2147483647 }),faker.number.int({ max: 2147483647 }),faker.number.int({ max: 2147483647 }),faker.number.int({ max: 2147483647 }),faker.number.int({ max: 2147483647 })],
    bigIntArray: [BigInt(faker.number.int()),BigInt(faker.number.int()),BigInt(faker.number.int()),BigInt(faker.number.int()),BigInt(faker.number.int())],
    floatArray: [faker.number.float(),faker.number.float(),faker.number.float(),faker.number.float(),faker.number.float()],
    booleanArray: [faker.datatype.boolean(),faker.datatype.boolean(),faker.datatype.boolean(),faker.datatype.boolean(),faker.datatype.boolean()],
    dateTimeArray: [faker.date.anytime(),faker.date.anytime(),faker.date.anytime(),faker.date.anytime(),faker.date.anytime()],
    json: {test: faker.lorem.word()},
    nullableJson: undefined,
    enum: faker.helpers.arrayElement([Enum.A, Enum.B, Enum.C] as const),
    nullableEnum: undefined,
    enums: faker.helpers.arrayElement([Enum.A, Enum.B, Enum.C] as const),
  };
}
export function fakeUserComplete() {
  return {
    id: faker.string.uuid(),
    email: faker.internet.email(),
    name: faker.person.fullName(),
    companyName: faker.company.name(),
    age: faker.number.int({min: 0, max: 99}),
    firstName: faker.person.firstName(),
    lastName: faker.person.lastName(),
    string: faker.lorem.words(5),
    stringWithDefault: 'default',
    nullableString: undefined,
    boolean: faker.datatype.boolean(),
    booleanWithDefault: true,
    nullableBoolean: undefined,
    int: faker.number.int(),
    intWithDefault: 1,
    nullableInt: undefined,
    bigInt: BigInt(faker.number.int()),
    bigIntWithDefault: BigInt(1),
    nullableBigInt: undefined,
    float: faker.number.float(),
    floatWithDefault: 1.1,
    nullableFloat: undefined,
    decimal: new Decimal(faker.number.float()),
    decimalWithDefault: new Decimal(1.23),
    nullableDecimal: undefined,
    dateTime: faker.date.anytime(),
    dateTimeWithDefault: new Date(),
    nullableDateTime: undefined,
    stringArray: faker.lorem.words(5).split(' '),
    intArray: [faker.number.int({ max: 2147483647 }),faker.number.int({ max: 2147483647 }),faker.number.int({ max: 2147483647 }),faker.number.int({ max: 2147483647 }),faker.number.int({ max: 2147483647 })],
    bigIntArray: [BigInt(faker.number.int()),BigInt(faker.number.int()),BigInt(faker.number.int()),BigInt(faker.number.int()),BigInt(faker.number.int())],
    floatArray: [faker.number.float(),faker.number.float(),faker.number.float(),faker.number.float(),faker.number.float()],
    booleanArray: [faker.datatype.boolean(),faker.datatype.boolean(),faker.datatype.boolean(),faker.datatype.boolean(),faker.datatype.boolean()],
    dateTimeArray: [faker.date.anytime(),faker.date.anytime(),faker.date.anytime(),faker.date.anytime(),faker.date.anytime()],
    json: {test: faker.lorem.word()},
    jsonWithDefault: {},
    jsonWithDefaultAndFake: {test2: faker.lorem.word()},
    nullableJson: undefined,
    enum: faker.helpers.arrayElement([Enum.A, Enum.B, Enum.C] as const),
    enumWithDefault: Enum.A,
    nullableEnum: undefined,
    enums: faker.helpers.arrayElement([Enum.A, Enum.B, Enum.C] as const),
    enumsWithDefault: [Enum.A, Enum.B],
  };
}
export function fakeUser2Complete() {
  return {
    id: faker.number.int({ max: 2147483647 }),
  };
}
export function fakeUserRelationComplete() {
  return {
    id: faker.string.uuid(),
    userId: faker.string.uuid(),
    userId2: faker.string.uuid(),
  };
}
export function fakeUser2RelationComplete() {
  return {
    id: faker.string.uuid(),
    user2Id: faker.number.int(),
  };
}
"
`;
